# rawdog

./: Cargo.toml
src/: converter.rs  exif.rs  main.rs
tests/: integration_test.rs
